--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ title: BullSec Security                          # the main title
 tagline: Hacking Articles and Blogs for your Reading Pleasure   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
+  Hacking Articles and Blogs for your Reading Pleasure.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: ''
