--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: BullSec Security                          # the main title
+title: $> bullsec.xyz                          # the main title
 
 tagline: Hacking Articles and Blogs for your Reading Pleasure   # it will display as the sub-title
 
