published Diffie Helman blog

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "workbench.colorTheme": "Bearded Theme Surprising Watermelon",
+  "workbench.colorTheme": "Bearded Theme Black & Ruby",
   "editor.minimap.enabled": false,
   "editor.wrappingIndent": "indent",
   "editor.overviewRulerBorder": false,
